Redundant --add-export declarations have been removed.